Fixed scrollbars, dynamic resizing msaViewer.

--- a/alignments/static/alignments/style.css
+++ b/alignments/static/alignments/style.css
@@ -120,7 +120,7 @@
   }
   #yPosSlider {
     position: relative;
-    top: 20px;
+    top: 30px;
     -webkit-transform: rotate(90deg);
     -moz-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
